--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@nivo/core": "^0.88.0",
+    "@nivo/sunburst": "^0.88.0",
     "d3": "^7.9.0",
     "d3-cloud": "^1.2.7",
     "react": "^18.3.1",
